2009-03-13  Lars Hartmann  <lars (at) chaotika (dot) org>

	Moved doxygen dir and modified doxyfile for api-doc:
	* doxygen/: moved to doc/doxygen.
	* doc/doxygen/api-doc (INPUT): removed src/ dir from api-doc.
	(FILE_PATTERNS): let api-doc only document header files.

	* configure.ac: added AC_C_CONST and AC_C_INLINE.

	* TODO: updated TODO.

	* README: replaced stub with content.

	Switched Project to 2clause BSD License:
	* t/02_lpxpak_parse.c: added license header.
	* t/01_lpatom_parse.c: added license header.
	* src/liblpxpak.c: deleted 3rd clause.
	* src/liblputil.c: deleted 3rd clause.
	* src/liblpatom.c: deleted 3rd clause.
	* include/util.h: deleted 3rd clause.
	* include/xpak.h: deleted 3rd clause.
	* include/dependency.h: deleted 3rd clause.
	* include/common.h: added license header.
	* include/atom.h: deleted 3rd clause.
	* doc/xpak.txt: deleted 3rd clause.
	* doc/xpak.5: deleted 3rd clause.
	* COPYING: deleted 3rd clause.

2009-03-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	added Makefile for Documentation folder.
	* configure.ac (AC_CONFIG_FILES): added doc/Makefile.
	* Makefile.am (SUBDIRS): added doc.
	* doc/Makefile.am: added.

2009-03-11  Lars Hartmann  <lars (at) chaotika (dot) org>

	* doc/xpak.5: added roff version of xpak.txt.
	added Copyright header and Authors section.

2009-03-06  Lars Hartmann  <lars (at) chaotika (dot) org>

	Optimized Allignment of structs:
	* include/xpak.h (lpxpak_entry): optimized allignment.
	(lpxpak): optimized allignment.
	(lpxpak_blob): optimized allignment.
	* include/atom.h (lpatom): optimized allignment.
	* src/liblpxpak.c (lpxpak_index_entry): optimized allignment.
	(lpxpak_index): optimized allignment.

	Fixed compile Error:
	* src/liblpatom.c: fixed incorrect enum member names.

2009-03-04  Lars Hartmann  <lars (at) chaotika (dot) org>

	Renamed enums to match their typedefs:
	* include/atom.h (lpatom_sufe_t): renamed anonym enum to
	lpatom_sufe.