@@ -29,11 +29,11 @@
 #define LPCOMMON 1
 
 #ifdef __cplusplus
-# define BEGIN_C_DECLS extern "C" {
-# define END_C_DECLS   }
+#  define BEGIN_C_DECLS extern "C" {
+#  define END_C_DECLS   }
 #else
-# define BEGIN_C_DECLS
-# define END_C_DECLS
+#  define BEGIN_C_DECLS
+#  define END_C_DECLS
 #endif
 
-#endif /* LPCOMMON */
+#endif /*! LPCOMMON */
